combine steps to make image smaller

--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -1,10 +1,11 @@
 FROM daaku/arch
 MAINTAINER Naitik Shah "n@daaku.org"
 
-RUN pacman --noconfirm --sync --refresh --sysupgrade
-RUN pacman --noconfirm --sync --asdeps grep shadow systemd
-RUN pacman --noconfirm --sync redis
-RUN pacman --noconfirm --remove --recursive --unneeded grep shadow systemd
+RUN \
+    pacman --noconfirm --sync --refresh --sysupgrade && \
+    pacman --noconfirm --sync --asdeps grep shadow systemd && \
+    pacman --noconfirm --sync redis && \
+    pacman --noconfirm --remove --recursive --unneeded grep shadow systemd
 
 RUN mkdir /data && chown redis:redis /data
 VOLUME /data
