redis volume setup changes

--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -2,17 +2,20 @@ FROM daaku/arch
 MAINTAINER Naitik Shah "n@daaku.org"
 
 RUN \
-    pacman --noconfirm --sync --asdeps grep shadow systemd && \
+    pacman --noconfirm --sync \
+      grep \
+      shadow \
+      systemd && \
     pacman --noconfirm --sync redis && \
-    pacman --noconfirm --remove --recursive --unneeded grep shadow systemd && \
-    mkdir /data && \
-    chown redis:redis /data
+    pacman --noconfirm --remove --recursive --unneeded \
+      grep \
+      shadow \
+      systemd && \
+    echo -e "y\ny\n" | pacman --sync --clean --clean
 
 ADD redis.conf /etc/redis.conf
 
-VOLUME /data
-WORKDIR /data
-
+VOLUME /var/lib/redis
 USER redis
 EXPOSE 6379
 CMD ["/usr/bin/redis-server", "/etc/redis.conf"]
