--- a/redis/redis.conf
+++ b/redis/redis.conf
@@ -2,7 +2,7 @@ port 6379
 timeout 0
 loglevel notice
 databases 16
-dir /data
+dir /var/lib/redis
 appendonly yes
 appendfsync everysec
 auto-aof-rewrite-percentage 100
