--- a/cassandra12/Dockerfile
+++ b/cassandra12/Dockerfile
@@ -2,38 +2,22 @@ FROM daaku/jre8-oracle
 MAINTAINER Naitik Shah "n@daaku.org"
 
 RUN \
-    pacman --noconfirm --sync \
-      gzip \
-      shadow \
-      tar && \
-    groupadd cassandra && \
-    useradd \
-      --gid cassandra \
-      --home-dir /home/cassandra \
-      --create-home \
-      cassandra && \
     mkdir \
       /etc/cassandra \
       /opt/cassandra \
       /var/cache/cassandra \
       /var/lib/cassandra && \
-    chown cassandra:cassandra \
-      /etc/cassandra \
+    chown 42001 \
       /var/cache/cassandra \
       /var/lib/cassandra && \
     curl http://mirrors.ibiblio.org/apache/cassandra/1.2.18/apache-cassandra-1.2.18-bin.tar.gz | \
-      tar --extract --gunzip --strip-components 1 --directory /opt/cassandra && \
-    pacman --noconfirm --remove --cascade --recursive \
-      gzip \
-      shadow \
-      tar && \
-    echo -e "y\ny\n" | pacman --sync --clean --clean
+      tar --extract --gunzip --strip-components 1 --directory /opt/cassandra
 
 ADD cassandra.yaml /etc/cassandra/cassandra.yaml
 ADD log4j.properties /etc/cassandra/log4j.properties
 
 VOLUME /var/lib/cassandra
-USER cassandra
+USER 42001
 EXPOSE 9160
 CMD [ \
   "/opt/java/bin/java", \
