--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -2,25 +2,19 @@ FROM daaku/arch
 MAINTAINER Naitik Shah "n@daaku.org"
 
 RUN \
-    pacman --noconfirm --sync \
-      shadow \
-      systemd && \
     pacman --noconfirm --sync --noscriptlet percona-server && \
-    groupadd -g 89 mysql && \
-    useradd -u 89 -g mysql -d /var/lib/mysql -s /bin/false mysql && \
-    systemd-tmpfiles --create mysqld.conf && \
-    mkdir -p /var/lib/mysql && \
-    chown mysql:mysql /var/lib/mysql && \
-    pacman --noconfirm --remove --recursive --unneeded \
-      shadow \
-      systemd && \
-    echo -e "y\ny\n" | pacman --sync --clean --clean
+    mkdir -p \
+      /run/mysqld \
+      /var/lib/mysql && \
+    chown 42004 \
+      /run/mysqld \
+      /var/lib/mysql
 
 ADD my.cnf /etc/mysql/my.cnf
 ADD init.sql /etc/mysql/init.sql
 ADD entrypoint.sh /usr/bin/mysql-entrypoint
 
 VOLUME /var/lib/mysql
-USER mysql
+USER 42004
 EXPOSE 3306
 CMD ["/usr/bin/mysql-entrypoint"]
