--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -2,20 +2,13 @@ FROM daaku/arch
 MAINTAINER Naitik Shah "n@daaku.org"
 
 RUN \
-    pacman --noconfirm --sync \
-      grep \
-      shadow \
-      systemd && \
-    pacman --noconfirm --sync redis && \
-    pacman --noconfirm --remove --recursive --unneeded \
-      grep \
-      shadow \
-      systemd && \
-    echo -e "y\ny\n" | pacman --sync --clean --clean
+    pacman --noconfirm --sync --noscriptlet redis && \
+    mkdir -p /var/lib/redis && \
+    chown 42006 /var/lib/redis
 
 ADD redis.conf /etc/redis.conf
 
 VOLUME /var/lib/redis
-USER redis
+USER 42006
 EXPOSE 6379
 CMD ["/usr/bin/redis-server", "/etc/redis.conf"]
