only use volumes to store data

--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -2,13 +2,9 @@ FROM daaku/arch
 MAINTAINER Naitik Shah "n@daaku.org"
 
 RUN \
-    pacman --noconfirm --sync --noscriptlet percona-server && \
-    mkdir -p \
-      /run/mysqld \
-      /var/lib/mysql && \
-    chown 42004 \
-      /run/mysqld \
-      /var/lib/mysql
+    mkdir -p /var/lib/mysql && \
+    chown 42004 /var/lib/mysql && \
+    pacman --noconfirm --sync --noscriptlet percona-server
 
 ADD my.cnf /etc/mysql/my.cnf
 ADD init.sql /etc/mysql/init.sql
