--- a/cassandra12/Dockerfile
+++ b/cassandra12/Dockerfile
@@ -5,11 +5,8 @@ RUN \
     mkdir \
       /etc/cassandra \
       /opt/cassandra \
-      /var/cache/cassandra \
       /var/lib/cassandra && \
-    chown 42001 \
-      /var/cache/cassandra \
-      /var/lib/cassandra && \
+    chown 42001 /var/lib/cassandra && \
     curl http://mirrors.ibiblio.org/apache/cassandra/1.2.18/apache-cassandra-1.2.18-bin.tar.gz | \
       tar --extract --gunzip --strip-components 1 --directory /opt/cassandra
 
