--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -4,4 +4,5 @@ datadir                 = /var/lib/mysql
 innodb-buffer-pool-size = 16M
 performance_schema      = off
 port                    = 3306
+socket                  = /tmp/mysql.sock
 sql_mode                = NO_ENGINE_SUBSTITUTION,STRICT_TRANS_TABLES
