--- a/mysql/Dockerfile
+++ b/mysql/Dockerfile
@@ -4,7 +4,8 @@ MAINTAINER Naitik Shah "n@daaku.org"
 RUN \
     mkdir -p /var/lib/mysql && \
     chown 42004 /var/lib/mysql && \
-    pacman --noconfirm --sync --noscriptlet percona-server
+    pacman --noconfirm --sync --noscriptlet percona-server && \
+    echo -e "y\ny\n" | pacman --sync --clean --clean
 
 ADD my.cnf /etc/mysql/my.cnf
 ADD init.sql /etc/mysql/init.sql
