--- a/redis/Dockerfile
+++ b/redis/Dockerfile
@@ -4,7 +4,8 @@ MAINTAINER Naitik Shah "n@daaku.org"
 RUN \
     mkdir -p /var/lib/redis && \
     chown 42006 /var/lib/redis && \
-    pacman --noconfirm --sync --noscriptlet redis
+    pacman --noconfirm --sync --noscriptlet redis && \
+    echo -e "y\ny\n" | pacman --sync --clean --clean
 
 ADD redis.conf /etc/redis.conf
 
