custom apt mirror, enable godeb

--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -1,19 +1,13 @@
 FROM ubuntu:15.10
 
+ADD sources.list /etc/apt/sources.list
 ADD apt.conf /etc/apt/apt.conf.d/dev.conf
 RUN echo "debconf debconf/frontend select noninteractive\n \
           debconf debconf/priority select critical" | debconf-set-selections
 
-RUN apt-get update
-RUN apt-get install \
-      apt-transport-https \
-      ca-certificates \
-      curl \
-      locales
-
-ADD sources.list /etc/apt/sources.list.d/dev.list
 RUN apt-key adv --keyserver hkp://pgp.mit.edu:80 --recv-keys 58118E89F3A912897C070ADBF76221572C52609D # docker key
 RUN apt-get update
+RUN apt-get install locales
 
 # locale
 ADD locale.gen /etc/locale.gen
@@ -26,7 +20,9 @@ RUN apt-get install \
       autoconf \
       automake \
       build-essential \
+      ca-certificates \
       cmake \
+      curl \
       docker-engine \
       g++ \
       gawk \
@@ -48,18 +44,18 @@ RUN apt-get install \
       zsh
 
 # install go, doc, vet, golint binaries
-#RUN export GOPATH=/tmp/gopath && \
-    #mkdir $GOPATH && \
-    #cd $GOPATH && \
-    #curl https://godeb.s3.amazonaws.com/godeb-amd64.tar.gz | \
-      #tar --extract --gunzip --directory $GOPATH && \
-    #$GOPATH/godeb install 1.5.3 && \
-    #go get \
-      #golang.org/x/tools/cmd/godoc \
-      #golang.org/x/tools/cmd/vet \
-      #github.com/golang/lint/golint && \
-    #mv $GOPATH/bin/golint /usr/bin/golint && \
-    #rm -rf $GOPATH
+RUN export GOPATH=/tmp/gopath && \
+    mkdir $GOPATH && \
+    cd $GOPATH && \
+    curl https://godeb.s3.amazonaws.com/godeb-amd64.tar.gz | \
+      tar --extract --gunzip --directory $GOPATH && \
+    $GOPATH/godeb install 1.5.3 && \
+    go get \
+      golang.org/x/tools/cmd/godoc \
+      golang.org/x/tools/cmd/vet \
+      github.com/golang/lint/golint && \
+    mv $GOPATH/bin/golint /usr/bin/golint && \
+    rm -rf $GOPATH
 
 RUN ln -sf /usr/share/zoneinfo/America/Los_Angeles /etc/localtime
 ADD sudoers /etc/sudoers.d/naitik
