use volume container, automate ssh-keys setup

--- a/dev/Makefile
+++ b/dev/Makefile
@@ -4,6 +4,13 @@ build:
 rebuild:
 	@docker build --no-cache -t daaku/dev .
 
+create-home-volume:
+	@docker create \
+	  --volume=/home/naitik \
+	  --name=daaku-home \
+	  ubuntu:15.10 \
+	  /bin/true
+
 run:
 	@docker run \
 	  --name=daaku-dev \
@@ -11,12 +18,17 @@ run:
 	  --detach \
 	  --privileged \
 	  --publish=666:22 \
-	  --volume=/home/naitik:/home/naitik \
+	  --volumes-from=daaku-home \
 	  --volume=/run/docker.sock:/run/docker.sock \
 	  --volume=/run/shm:/run/shm \
 	  daaku/dev
 
 rmf:
 	@docker rm -f daaku-dev
+
+ssh-keys:
+	@docker exec -it daaku-dev mkdir /home/naitik/.ssh
+	@docker cp ~/.ssh/id_rsa.pub daaku-dev:/home/naitik/.ssh/authorized_keys
+	@docker exec -it daaku-dev chown -R naitik:users /home/naitik
 
 restart: rmf run
