rename containers and hostname

--- a/dev/Makefile
+++ b/dev/Makefile
@@ -7,28 +7,27 @@ rebuild:
 create-home-volume:
 	@docker create \
 	  --volume=/home/naitik \
-	  --name=daaku-home \
+	  --name=naitik-home \
 	  ubuntu:15.10 \
 	  /bin/true
 
 run:
 	@docker run \
-	  --name=daaku-dev \
-	  --hostname=daaku-dev \
+	  --name=naitik-dev \
+	  --hostname=dev \
 	  --detach \
 	  --privileged \
 	  --publish=666:22 \
-	  --volumes-from=daaku-home \
+	  --volumes-from=naitik-home \
 	  --volume=/run/docker.sock:/run/docker.sock \
-	  --volume=/run/shm:/run/shm \
 	  daaku/dev
 
 rmf:
-	@docker rm -f daaku-dev
+	@docker rm -f naitik-dev
 
 ssh-keys:
-	@docker exec -it daaku-dev mkdir /home/naitik/.ssh
-	@docker cp ~/.ssh/id_rsa.pub daaku-dev:/home/naitik/.ssh/authorized_keys
-	@docker exec -it daaku-dev chown -R naitik:users /home/naitik
+	@docker exec -it naitik-dev mkdir /home/naitik/.ssh
+	@docker cp ~/.ssh/id_rsa.pub naitik-dev:/home/naitik/.ssh/authorized_keys
+	@docker exec -it naitik-dev chown -R naitik:users /home/naitik
 
 restart: rmf run
