--- a/dev/Dockerfile
+++ b/dev/Dockerfile
@@ -49,7 +49,7 @@ RUN apt-get install \
       zsh
 
 ADD daaku-debs /usr/bin/daaku-debs
-RUN daaku-debs go_1.6-godeb1_amd64.deb
+RUN daaku-debs go_1.7~beta1-godeb1_amd64.deb
 RUN daaku-debs user-naitik-1.4.deb
 RUN daaku-debs sudo-naitik-1.0.deb
 RUN daaku-debs neovim-2016.06.05.deb
